Fix compile warnings
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/batik/trunk@1803263 13f79535-47bb-0310-9956-ffa450edef68